--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -8,19 +8,19 @@ import CountdownTimer from "@components/CountdownTimer.astro";
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>After 9 Years...</h1>
+      <h1>Después de 9 Años...</h1>
       <div class="wedding-date">
         <p class="date-text">
-          Friday, June 27th 2025
+          Viernes, 27 de junio 2025
           <br />
           Seattle, Washington
         </p>
       </div>
 
       <p class="welcome-text">
-        Join us as we celebrate our love and thank those who have helped us along the way. We're creating
-        this space to share our story and keep you updated with all the important details
-        about our special day.
+        Acompáñanos a celebrar nuestro amor y agradecer a quienes nos han ayudado en el camino. Hemos creado
+        este espacio para compartir nuestra historia y mantenerlos informados sobre todos los detalles importantes
+        de nuestro día especial.
       </p>
 
       <CountdownTimer />
