--- a/src/pages/rsvp.astro
+++ b/src/pages/rsvp.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Header from "@components/Header.astro";
-import { WEDDINGCONFIG } from "../config";
+import { WEDDINGCONFIG } from "@config";
 
 const validHashes = WEDDINGCONFIG.invites.map(invite => invite.hash);
 ---
