--- a/src/pages/rsvp/[hash].astro
+++ b/src/pages/rsvp/[hash].astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Header from "@components/Header.astro";
-import { WEDDINGCONFIG } from "../../config";
+import { WEDDINGCONFIG } from "@config";
 
 export async function getStaticPaths() {
   return WEDDINGCONFIG.invites.map(invite => ({
