update main page

--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -18,9 +18,12 @@ import CountdownTimer from "@components/CountdownTimer.astro";
       </div>
 
       <p class="welcome-text">
-        Acompáñanos a celebrar nuestro amor y agradecer a quienes nos han ayudado en el camino. Hemos creado
-        este espacio para compartir nuestra historia y mantenerlos informados sobre todos los detalles importantes
-        de nuestro día especial.
+        Por fin está sucediendo. Ainara y Luke se van a casar. Los invitamos a celebrar nuestro amor
+        y también a ustedes por haber sido parte de hacer esto posible.
+        <br /><br />
+        Tendremos un rompehielo el jueves 26 de junio, la boda el viernes 27, y varias actividades en grupos
+        pequeños durante el fin de semana. Encuentren más información en este sitio web, o pregúntennos
+        si tienen dudas. ¡Estamos ansiosos por verlos!
       </p>
 
       <CountdownTimer />
