--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,11 @@ import CountdownTimer from "@components/CountdownTimer.astro";
       </div>
 
       <p class="welcome-text">
-        Join us as we celebrate our love and thank those who have helped us along the way. We're creating
-        this space to share our story and keep you updated with all the important details
-        about our special day.
+        It is finally happening. Ainara and Luke are getting married. Please join us both to celebrate our love,
+        but also you for playing a part in making this all possible.
+        <br /><br />
+        We will have an ice breaker on Thursday June 26th, Wedding on Friday the 27th, and various small group activities
+        over the weekend. Learn more on this website, or ask us if you have any questions. We can't wait to see you there.
       </p>
 
       <CountdownTimer />
