--- a/src/pages/es/activities.astro
+++ b/src/pages/es/activities.astro
@@ -173,6 +173,7 @@ const activities = [
       name="Activities"
       activities={activities}
       categoryInfo={categoryInfo}
+      description="Aquí hay una lista de actividades no organizadas para considerar si tienes algo de tiempo libre durante tu viaje."
     />
-  </main>
+    />
 </Layout>
