--- a/src/pages/activities.astro
+++ b/src/pages/activities.astro
@@ -5,6 +5,7 @@ import Header from "@components/Header.astro";
 import Layout from "@layouts/Layout.astro";
 import ActivitySelection from '@components/ActivitySelection.astro';
 
+
 const categoryInfo = {
   '🥾': 'Hiking',
   '👨‍👩‍👦': 'Good for Kids',
@@ -173,6 +174,7 @@ const activities = [
       name="Activities"
       activities={activities}
       categoryInfo={categoryInfo}
+      description="Here is a list of unorganized activities to consider if you have some downtime during your trip."
     />
   </main>
 </Layout>
