we are excited exglam

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import CountdownTimer from "@components/CountdownTimer.astro";
         but also you for playing a part in making this all possible.
         <br /><br />
         We will have an ice breaker on Thursday June 26th, Wedding on Friday the 27th, and various small group activities
-        over the weekend. Learn more on this website, or ask us if you have any questions. We can't wait to see you there.
+        over the weekend. Learn more on this website, or ask us if you have any questions. We can't wait to see you there!
       </p>
 
       <CountdownTimer />
