--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -73,8 +73,8 @@ const getLocalizedUrl = (path: string) => {
           </li>
           <li>
             <a
-              href={getLocalizedUrl("/about/")}
-              class={normalizedPathname === "/about/" ? "active" : ""}
+              href={getLocalizedUrl("/schedule/")}
+              class={normalizedPathname === "/schedule/" ? "active" : ""}
             >
               {t.about}
             </a>
